fixed the hover effect for the footer popout on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -666,4 +666,7 @@ SKELETON
   .footer__link{
     font-size: 20px;
   }
+  .footer__logo--wrapper:hover .footer__pop-out{
+    transform: translate(100px, -50%);
+  }
 }
